[package]
name = "cradle-hooks"
version = "0.1.3"
edition = "2024"
description = "The cradle workspace's function hooking logic"
license = "MIT"
repository = "https://github.com/AzathothC2/cradle-hooks"
readme = "README.md"

[dependencies]
cradle-shared = "0.1.1"
[dependencies.windows-sys]
version = "0.61.2"
features = [
    "Win32_System_ProcessStatus", "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Kernel"
]

[features]
default = []
unstable = []
